# cadence-sass-project-management

./: AGENTS.md  CURRENT_STATE.md  README.md
.github/workflows/: slice0.yml
docs/architecture/: expedition_simulation_system_shape.md
docs/implementation/: slice_0_findings.md
docs/origin/: project_manager_expedition_scenario.md
docs/product/: emergent_role_recognition_portable_worker_evidence_and_license_incentives_v0.md  expedition_orchestration_product_synthesis.md  lightweight_ad_hoc_project_mode_v0.md  shared_core_professional_extension_boundary.md
docs/reconciliation/: cadence_strategy_reconciliation_2026-07-13.md
prototype/slice0/: README.md  pyproject.toml
prototype/slice0/evidence/: 00_baseline.json  01_simulated_current_constraints.json  02_simulated_overtime_one_hour.json  03_held_scenario.json  04_authorized_change_set.json  05_stale_execution_rejected.json  06_applied_operational_revision.json
prototype/slice0/fixtures/: expedite_project_x_request_v0.json  project_x_portfolio_v0.json
prototype/slice0/schemas/: scenario_packet.prototype.schema.json
prototype/slice0/src/cadence_professional_slice0/: __init__.py  cli.py  model.py  scheduler.py  workflow.py
prototype/slice0/tests/: conftest.py  test_evidence_snapshots.py  test_invariants.py  test_vertical_flow.py
tools/automation/briefs/: next_slice_proposal.md
tools/automation/briefs/active/: slice_0_professional_orchestration_proof.md
tools/automation/checklists/: slice_completion_checklist.md
tools/automation/templates/: slice_brief_template.md
(+1 files in other folders)
